k8s/Kubernetes-Principiante-Experto/17_Ingress/2_ingress-example-svc2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deploy2
  labels:
    app: frontsvc2
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: frontsvc2
  template:
    metadata:
      labels:
        app: frontsvc2
    spec:      
      containers:
        - name: nginx
          image: nginx:alpine
          command: ["sh", "-c", "echo VERSION SVC 2.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress2
  labels:
    app: frontsvc2
spec:
  type: ClusterIP
  selector:
    app: frontsvc2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
