k8s/Kubernetes-Principiante-Experto/17_Ingress/2_ingress-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deploy
  labels:
    app: front
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:      
      containers:
        - name: nginx
          image: nginx:alpine
          command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress
  labels:
    app: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
