k8s/Kubernetes-Principiante-Experto/17_Ingress/3_ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /svc1
        pathType: Prefix
        backend:
          service:
            name: svc-ingress
            port:
              number: 80
  - http:
      paths:
      - path: /svc2
        pathType: Prefix
        backend:
          service:
            name: svc-ingress2
            port:
              number: 80
